--- a/jx-app-gitea/requirements.yaml
+++ b/jx-app-gitea/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
 - name: "gitea"
-  repository: https://chartmuseum.jenkins-x.io
+  repository: https://storage.googleapis.com/chartmuseum.jenkins-x.io
   version: 1.3.12
